# pyfilament

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: debug.yml  deploy.yml  draft.yml  publish.yml  pytest.yml  test.yml  update_dependencies.yml
alembic/: env.py
backend/alembic_filament/: env.py
backend/filament/: cache_utils.py  cli.py  cli_cleanup.py  db_models.py  filament.py  filament_api.py  hooks.py  module_type_registry.py  task_queue.py  task_state.py  test_app.py  utils.py  utils_call_stack.py
docs/: astro.config.mjs  package-lock.json
examples/: get_weather.py  hello_world.py  test_get_weather.py  test_hello_world.py
examples/web_analyst/: __main__.py  app.py  cli.py  test_app.py  test_web_analyst.py  worker.py
filament-ui/: package-lock.json  package.json
filament-ui/src/: ApolloContext.jsx  App.jsx  TaskRunPage.jsx  TaskRunsComparePage.jsx  TaskTypeStackPage.jsx  TasksTimeline.jsx  queries.jsx
kustomize/apps/: kustomization.yaml
kustomize/cluster/: ingress-pyfilament-demo.yaml  ingress-pyfilament-website.yaml  (+3 more)
src/: pyproject.toml
src/alembic_filament/: script.py.mako
src/alembic_filament/versions/: 11c7d4579574_.py  3e2df1e9f806_.py  710e9d0aa52c_.py  8074f58ce89a_.py  99538300054a_.py  bc498857ff1c_.py
src/filament/: README.md  __init__.py  cache_utils.py  cli_cleanup.py  db_models.py  db_session.py  filament.py  filament_api.py  func_registry.py  hooks.py  redis_handler.py  redis_semaphore.py  redis_token_bucket.py  redis_utils.py  task_queue.py  utils.py
src/filament/api/: app.py  graphql.py  main.py  middleware.py  routes.py  setup_logging.py
src/filament/api/logic/: task_run_dict.py
src/filament/api/resolvers/: task.py
src/filament/cli/: cli_cleanup.py
src/filament/db/: models.py
src/filament/logic/: cache_keys.py  cache_utils.py  call_stack.py  module_type_registry.py  task_run.py
src/filament/queue/: task_queue.py
src/filament/queue/types/: remote_task_result.py  remote_task_run.py  remote_task_type.py
src/filament/redis/: redis_handler.py  redis_semaphore.py  redis_token_bucket.py
src/filament/registry/: task_type_registry.py
src/filament/state/: register.py  task_run_state.py  task_type_state.py
src/filament/task/: constants.py  remote_task_run.py  task_run.py  task_type.py
src/filament/task/queue/: task_queue.py
src/filament/task/registry/: task_type_registry.py
src/filament/task/state/: task_run_state.py  task_state.py
src/filament/task/types/: __init__.py  remote_task_run.py  task_run.py  task_type.py
src/filament/tests/: semaphore_test.py  token_bucket_test.py
src/filament/types/: __init__.py  base.py  cache_key.py  exception_type.py  task.py  task_config.py  task_run.py  task_type.py
tests/: semaphore_test.py  test_cached_task.py  test_cancel.py  test_cancel_queue.py  test_cancel_state.py  test_queue.py  test_task.py  token_bucket_test.py
ui/: .prettierrc  Dockerfile  package-lock.json  package.json
website/: Dockerfile  filament-landing-page.html
(+68 files in other folders)
