[project]
name = "pyfilament"
dynamic = ["version"]
description = "lightweight task framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "James Wu", email = "james@centauri-ai.tech" }]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
    "uvicorn>=0.49.0",
    "anyio>=4.13.0",
    "inflection>=0.5.1",
    "pydantic>=2.13.4",
    "beartype>=0.22.9",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "strawberry-graphql>=0.316.0",
    "starlette>=1.2.1",
    "werkzeug>=3.1.8",
    "redis>=8.0.0",
]

[project.urls]
Homepage = "https://pyfilament.io/"
Repository = "https://github.com/pyfilament/pyfilament"
"Bug Tracker" = "https://github.com/pyfilament/pyfilament/issues"
Discord = "https://discord.gg/RgyZceR53B"

[project.optional-dependencies]
dev = ["aiosqlite>=0.22.1"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "hupper>=1.12.1",
    "watchdog>=6.0.0",
    "ruff>=0.15.16",
    "mypy>=1.20.2",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "diff-cover>=10.3.0",
    "coverage>=7.14.1",
    "mock>=5.2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/filament"]

[tool.ruff]
line-length = 120
target-version = 'py314'

[tool.ruff.format]
quote-style = 'single'

[tool.mypy]
plugins = ['pydantic.mypy']
disable_error_code = ['import-untyped', 'empty-body', 'prop-decorator']

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
